fix content jump

--- a/source/elements/header/_style.scss
+++ b/source/elements/header/_style.scss
@@ -1,4 +1,3 @@
-$header-height: 174px;
 $header-height-mobile: 96px;
 .is_no_js_dot_menu {
 	white-space: nowrap;
@@ -10,19 +9,17 @@ $header-height-mobile: 96px;
 	max-width: 100vw;
 	color: $white;
 	font-size: 16px;
+	min-height: $header-height-mobile;
 	&-i {
 		z-index: 8;
 		position: relative;
-		position: relative;
-		top: 0;
-		left: 0;
 		width: 100%;
 		top: $header-height-mobile;
 		transform: translateY(-$header-height-mobile);
 		@include min-screen($tablet) {
 			& {
-				top: $header-height;
-				transform: translateY(-$header-height);
+				top: 0;
+				transform: none;
 			}
 		}
 	}
@@ -30,9 +27,19 @@ $header-height-mobile: 96px;
 		top: 0;
 		transition: transform .3s ease-in-out;
 		position: fixed;
+		@include min-screen($tablet) {
+			& {
+				position: relative;
+			}
+		}
 	}
 	&.is-fixed &-i {
 		transform: translateY(0);
+		@include min-screen($tablet) {
+			& {
+				transform: none;
+			}
+		}
 	}
 	.is-menu-show &-i {
 		top: 0;
