--- a/source/elements/header/header_open/_style.scss
+++ b/source/elements/header/header_open/_style.scss
@@ -15,7 +15,6 @@
 	visibility: hidden;
 	opacity: 0;
 	transform: translateY(-2em);
-	z-index: 11;
 	.is-menu-show &{
 		transform: translateY(0);
 		opacity: 1;
@@ -23,7 +22,7 @@
 	}
 	@include min-screen($tablet) {
 		& {
-			padding: 1.4em 1.5em;
+			padding: 1em 1.5em;
 			top: 0 !important;
 		}
 	}
